优化动态生成器